# garmin-dashboard

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cli.py  compose.yml  pyproject.toml  requirements.txt
api/: main.py
api/models/: __init__.py  activity.py
api/routes/: activity.py
app/: main.py
app/models/: __init__.py  activity.py
app/repositories/: __init__.py  activity.py
app/routes/: activity.py
core/alembic/: README  env.py
core/alembic/versions/: 012efb9d2dcb_init_db.py  2024_11_24_611cb65f916e_init_activity.py  e0ad20bde36e_init_activity.py
core/cli/: datapipeline.py
core/datapipeline/: activity.json  activity.py
core/dbt/activity/: dbt_project.yml
core/postgres/: db.py
models/: __init__.py  activity.py
repository/: __init__.py  abstract.py  activity.py
