[project]
name = "garmin-dashboard"
version = "0.1.0"
description = "Garmin Dashboard"
authors = ["Nicolas Trossat <nicolas@trossat.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "click>=8.1.7",
    "dbt-postgres>=1.8.2",
    "fastapi[standard]>=0.115.5",
    "garminconnect>=0.2.20",
    "pydantic>=2.10.1",
    "sqlmodel>=0.0.22",
]
